# fpl-coach

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  constants.py  fpl.py  players.py  predict.py  preprocess.py  pyproject.toml  requirements.txt
data/: aliases.json  filter_options.json  fixtures.csv  gw_history.csv  id_conversions.json  merged_data.csv  metadata.json  params.json  players_2021-22.json  predicted.csv  predicted_final.csv  predictions.csv  runs.json  team_history.json  teams_2021-22.json  understat_player_data.json
data/backups/: fixtures.csv  manager_gws.csv  managers.csv  metadata.json  player_gws.csv  player_gws_predicted.csv  players.csv  team_gws.csv  teams.csv
data/csv/: gw_history.csv  predictions.csv
data/html/: a..html  aa.html  ad.html  ag.html  ai.html  aj.html  ak.html  al.html  am.html  an.html  ap.html  ar.html  au.html  aw.html  ay.html  az.html  b..html  ba.html  be.html  bi.html  bo.html  br.html  bu.html  ca.html  ce.html  ch.html  cl.html  co.html  cr.html  cu.html  da.html  de.html  (+149 more)
scripts/: collect.sh  init.sql  lint.sh  merge.sql  my_team.sql  predict.sql  reset.sh  tables.sql
sql/: tables.sql
src/: __init__.py  backup.py  constants.py  db.py  document.py  example.json  fbref.py  fbrefscraper.py  fixtures.py  fpl.py  fplapi.py  gameweek.py  managers.py  match.py  model.py  mongo.py  player.py  player_fpl_data.py  player_gws.py  player_understat_data.py  players.py  playground.ipynb  predict.py  predictions.ipynb  preprocess.py  team_predict.py  teams.py  test.py  utils.py
tests/: test.py  test_fixtures.py
(+9 files in other folders)
