[tool.poetry]
name = "fpl-coach"
version = "0.1.0"
description = ""
authors = ["Rafael Chaves <rafaelvchaves@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
understat = "^0.1.4"
aiohttp = "^3.8.1"
pandas = "^1.4.1"
Unidecode = "^1.3.4"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
