[tool.poetry]
name = "fpl_coach"
version = "0.1.0"
description = ""
authors = ["Rafael Chaves <rafaelvchaves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
mysql-connector-python = "^8.0.28"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
