[tool.poetry]
name = "fpl_coach"
version = "0.1.0"
description = ""
authors = ["Rafael Chaves <rafaelvchaves@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
requests = "^2.27.1"
mysql-connector-python = "^8.0.28"
python-dateutil = "^2.8.2"
aiohttp = "^3.8.1"
numpy = "^1.22.3"
pandas = "^1.4.1"
understat = "^0.1.4"
Unidecode = "^1.3.4"
SQLAlchemy = "^1.4.35"
mysqlclient = "^2.1.0"
prettytable = "^3.2.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
